@@ -45,6 +45,8 @@ the .destroy membery instead of calling remove_connection()
 added a new command 10115 for getting some useful information about the
 server (colten edwards)
 
+added new command 10112 to show the server links (colten edwards)
+
 Changes from 0.11
 =================
 
